[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysui_tx"
version = "0.77.0"

description = "SUI client Python SDK fork to support python version 3.9"
requires-python = ">=3.9"
keywords = ["software development kit", "sui", "blockchain"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "canoser==0.8.2",
    "base58 < 2.2.0, >=2.1.0",
]
